Added mute conversation option

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -573,5 +573,9 @@
     },
     "relink": {
         "message": "Relink"
+    },
+    "muteConversation": {
+      "message": "Mute/Unmute",
+      "description": "Mute/unmute current conversation"
     }
 }
